--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -104,7 +104,7 @@ font-size: 14px !important;
 }
 
 .top-bar-nav__container-mobile{
-	background-color:white;
+	background-color: rgba(248, 247, 240, 0.89);
 }
 .top-bar__nav-icon-mobile{
 	border-right: solid 0px;
@@ -128,4 +128,8 @@ font-size: 14px !important;
 	list-style: none;
 	padding: 5% 0;
   display: inline-block;
+}
+
+.move-right .exit-off-canvas {
+	box-shadow: 0 0 0 rgba(0, 0, 0, 0.5), 0 0 0 rgba(0, 0, 0, 0.5);
 }
