--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -100,7 +100,8 @@ $include-html-global-classes: $include-html-classes;
 $gray        : #4d4d4d;
 $white       : #FFFFFF;
 $orange      : #ffb487;
-$text        : #333333;;
+$text        : #333333;
+$text-bright : rgba(51, 51, 51, 0.6);
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
 // $vapor       : #F6F6F6;
