とりあえず

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,338 +1,23 @@
-/*********************
-FOOTER STYLES
-*********************/
+.footer{
 
-.footer {
-	clear: both;
-	margin-top: 1em;
-}
+    &_wp{
+      @extend .row;
+    }
 
-.footer-links {} 
-
-.copyright {}
-
-.socialmedia-container{ 
-	background-color: #EEEEEE;
-
-}
-
-.socialmedia-title{
-	margin-top: 6%;
-}
-.facebook-link{
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    background: url("http://haej.noriakihattori.com/wp-content/themes/haej-dev/assets/images/facebook.jpg");
-    background-repeat: none;
-}
-.twitter-link{
-    width: 50px;
-    height: 50px;
-    margin-left: 30px;
-    display: inline-block;
-    background: url("http://haej.noriakihattori.com/wp-content/themes/haej-dev/assets/images/twitter.jpg");
-    background-repeat: none;
-}
-
-
-.facebook-link:hover, .twitter-link:hover{
-    background-position: -60px 0px;
-}
-
-.socialmedia-icons{text-align: center;
-    margin-top: 4%;
-    margin-bottom: 7%;
-
-}
-
-.newsletter-title {
-	margin-top: 4%;
-	margin-bottom: 5%;
-	@include mqXS{
-		margin-top: 0;
-		margin-bottom: 7%;
-	}
-
+  &-left_wp{
+    @extend .columns;
+    @extend .medium-6;
+    font-size: 12px;
   }
 
 
-/*********************
-FOUNDATION STYLES
-*********************/
-.clearing-assembled.clearing-blackout a:hover {
-	background: none;
-}
+  &-right_wp{
+    @extend .columns;
+    @extend .medium-6;
+  }
 
-/*********************
-PLUGIN STYLES
-*********************/
-// Makes Gravity Forms play nice with Foundation Form styles
-.gform_body ul {
-    list-style: none outside none;
-    margin: 0;
-}
-
-
-
-/*********************
-Animated checkboxes
-*********************/
-
-*,
-*:after,
-*::before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.ac-custom {
-	padding: 0 3em;
-	max-width: 900px;
-	margin: 0 auto;
-				h2 {
-			font-size: 3em;
-			font-weight: 300;
-			padding: 0 0 0.5em;
-			margin: 0 0 30px;}
-
-			ul,ol {
-			list-style: none;
-			padding: 0;
-			margin: 0 auto;
-			max-width: 800px;}
-
-			li {
-			margin: 0 auto;
-			padding: 1em 0;
-			position: relative;
-			font-weight:300;}
-
-			label {
-			display: inline-block;
-			position: relative;
-			font-size: 1.2em;
-			padding: 0 0 0 80px;
-			vertical-align: top;
-			color: $text-bright;
-			cursor: pointer;
-			-webkit-transition: color 0.3s;
-			transition: color 0.3s;
-			@include mqXS{
-				font-size:14px;
-				padding: 0 0 10px 40px;
-			}
-
-		}
-
-			input[type="checkbox"],input[type="radio"],label::before {
-			width: 40px;
-			height: 40px;
-			top: 60%;
-			left: 0;
-			margin-top: -25px;
-			position: absolute;
-			cursor: pointer;
-			@include mqXS {
-			width: 30px;
-			height: 30px;
-
-			}
-		}
-
-			input[type="checkbox"],input[type="radio"] {
-			opacity: 0;
-			-webkit-appearance: none;
-			display: inline-block;
-			vertical-align: middle;
-			z-index: 100;}
-
-			label::before {
-			content: '';
-			border: 4px solid #fff;
-			-webkit-transition: opacity 0.3s;
-			transition: opacity 0.3s;}
 
 
 }
-
-
-
-.ac-radio label::before {
-	border-radius: 50%;
-}
-
-.ac-custom input[type="checkbox"]:checked + label,
-.ac-custom input[type="radio"]:checked + label {
-	color: #333333;
-} 
-
-.ac-custom input[type="checkbox"]:checked + label::before,
-.ac-custom input[type="radio"]:checked + label::before {
-	opacity: 0.8;
-}
-
-/* General SVG and path styles */
-
-.ac-custom svg {
-	position: absolute;
-	width: 40px;
-	height: 40px;
-	top: 50%;
-	margin-top: -20px;
-	left: 5px;
-	pointer-events: none;
-}
-
-.ac-custom svg path {
-	stroke: $text-bright;
-	stroke-width: 13px;
-	stroke-linecap: round;
-	stroke-linejoin: round;
-	fill: none;
-}
-
-/* Specific input, SVG and path styles */
-
-/* Circle */
-.ac-circle input[type="checkbox"],
-.ac-circle input[type="radio"],
-.ac-circle label::before {
-	width: 30px;
-	height: 30px;
-	margin-top: -15px;
-	left: 10px;
-	position: absolute;
-}
-
-.ac-circle label::before {
-	background-color: #333333;
-	border: none;
-}
-
-.ac-circle svg {
-	width: 70px;
-	height: 70px;
-	margin-top: -35px;
-	left: -10px;
-}
-
-.ac-circle svg path {
-	stroke-width: 5px;
-} 
-
-/* Box Fill */
-.ac-boxfill svg path {
-	stroke-width: 8px;
-} 
-
-/* Swirl */
-.ac-swirl svg path {
-	stroke-width: 8px;
-}
-
-/* List */
-.ac-list ol {
-	list-style: decimal;
-	list-style-position: inside;
-}
-
-.ac-list ol li {
-	font-size: 2em;
-	padding: 1em 1em 0 2em;
-	text-indent: -40px;
-}
-
-.ac-list ol li label {
-	font-size: 1em;
-	text-indent: 0;
-	padding-left: 30px;
-}
-
-.ac-list label::before {
-	display: none;
-}
-
-.ac-list svg {
-	width: 100%;
-	height: 80px;
-	left: 0;
-	top: 1.2em;
-	margin-top: 0px;
-}
-
-.ac-list svg path {
-	stroke-width: 4px;
-}
-
-/* Media Queries */
-@media screen and (max-width: 50em) {
-	section {
-		font-size: 80%;
-	}
-}
-
-.no-animated::before{border: 0 !important;
-    cursor: default !important;
-    width: 0px !important;
-    height: 0px !important;}
-    .no-animated{padding:0 !important;}
-
-/*********************
-form
-*********************/
-.container-form{
-    background-color: rgba(248,247,240,0.89);
-    margin-top: -20px;
-    padding-top: 30px;
-    color: $text;
-}
-.container-submitt{    padding-bottom: 30px;
-    margin-top: 30px;}
-
-
-
-
-.form-title{
-    text-align: center;
-    margin-bottom: 10%;
-	h1{font-size: 38px;}
-
-}
-.form-subtitle{
-	    margin-top: 3%;
-    margin-bottom: 1%;
-}
-
-
-.form-newsletter__container{
-	font-weight:300;
-}
-
-
-.newslatter-form__subtext{
-
-}
-
-
-.form_textarea{
-	outline-style: none;
-	text-indent: .25em;
-	border-radius: 0px;
-	color: #e8e5d5 !important;
-	border: 0 none !important;
-	font-size: 18px;
-	letter-spacing: 2px;
-	outline-style: none;
-	padding: 10px 12px;
-	@include box-shadow(0px 0px 0px 0px #fff);
- @include transition(all 0.2s);
- 	&:hover, &:focus{
-		background-color: $text-bright !important;
-		@include box-shadow(0px 0px 0px 0px #fff);
- 	}
-}
-
 
 
