--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /******************************************************************
-Theme Name: haej__dev
+Theme Name: haej-dev
 Theme URI: http://www.haej.com
 Description:
 Author: Your Name Here
