--- a/assets/scss/base/foundation/_settings.scss
+++ b/assets/scss/base/foundation/_settings.scss
@@ -5,7 +5,7 @@
 //
 
 // Table of Contents
-// Foundation Settings 
+// Foundation Settings
 //
 // a. Base
 // b. Grid
@@ -47,7 +47,6 @@
 // 33. Tooltips
 // 34. Top Bar
 // 36. Visibility Classes
-// 37. animated grid
 
 // a. Base
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -56,7 +55,7 @@
 // $rem-base: 16px;
 
 // Allows the use of rem-calc() or lower-bound() in your settings
-@import "../../bower_components/foundation/scss/foundation/functions";
+@import 'foundation/functions';
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
@@ -84,24 +83,19 @@ $include-html-global-classes: $include-html-classes;
 // $total-columns: 12;
 // $column-gutter: rem-calc(30);
 
-
-
 // c. Global
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-   $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+// $font-family-sans-serif: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
 // We use these to define default font weights
 // $font-weight-normal: normal;
 // $font-weight-bold: bold;
-$gray        : #4d4d4d;
-$white       : #FFFFFF;
-$orange      : #ffb487;
-$text        : #333333;
-$text-bright : rgba(51, 51, 51, 0.6);
+
+// $white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
 // $vapor       : #F6F6F6;
@@ -132,7 +126,7 @@ $text-bright : rgba(51, 51, 51, 0.6);
 // We use these to control various global styles
 // $body-bg: $white;
 // $body-font-color: $jet;
-   $body-font-family: $font-family-sans-serif;
+// $body-font-family: $font-family-sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
@@ -156,31 +150,6 @@ $text-bright : rgba(51, 51, 51, 0.6);
 
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
-
-
-@mixin mqLG {
-  @media (min-width: 1200px) and (max-width: 1920px) { @content; }
-}
-@mixin mqMD {
-  @media (min-width: 992px) and (max-width: 1199px) { @content; }
-}
-@mixin mqSM {
-  @media (min-width: 768px) and (max-width: 991px) { @content; }
-}
-@mixin mqXS {
-  @media (min-width: 320px) and (max-width: 767px) { @content; }
-}
-
-@mixin mqSM-LG {
-  @media (min-width: 320px) and (max-width: 767px) { @content; }
-}
-@mixin mqXS-SM {
-  @media (min-width: 320px) and (max-width: 991px) { @content; }
-}
-@mixin mqMD-LG {
-  @media (min-width: 992px) and (max-width: 1920px) { @content; }
-}
-
 
 // $small-breakpoint:  em-calc(640);
 // $medium-breakpoint: em-calc(1024);
@@ -244,7 +213,7 @@ $text-bright : rgba(51, 51, 51, 0.6);
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
-$header-font-color: $gray;
+// $header-font-color: $jet;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
@@ -1431,8 +1400,8 @@ $header-font-color: $gray;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: rgba($white, .0);
-$topbar-bg: $topbar-bg-color;
+// $topbar-bg-color: $oil;
+// $topbar-bg: $topbar-bg-color;
 
 // Height and margin
 // $topbar-height: rem-calc(45);
@@ -1443,16 +1412,16 @@ $topbar-bg: $topbar-bg-color;
 // $topbar-title-font-size: rem-calc(17);
 
 // Set the link colors and styles for top-level nav
-$topbar-link-color: $gray;
-$topbar-link-color-hover: $gray;
-$topbar-link-color-active: $gray;
-$topbar-link-color-active-hover: $gray;
+// $topbar-link-color: $white;
+// $topbar-link-color-hover: $white;
+// $topbar-link-color-active: $white;
+// $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
-$topbar-link-bg: rgba($white, .0);
- $topbar-link-bg-hover: rgba($white, .0);
- //$topbar-link-bg-color-hover: $charcoal;
+// $topbar-link-bg: $topbar-bg;
+// $topbar-link-bg-hover: $jet;
+// $topbar-link-bg-color-hover: $charcoal;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
@@ -1464,21 +1433,21 @@ $topbar-link-bg: rgba($white, .0);
 // $topbar-button-top: 7px;
 
 // Style the top bar dropdown elements
- $topbar-dropdown-bg: rgba($white, .0);
-$topbar-dropdown-link-color: $white;
-$topbar-dropdown-link-color-hover: $topbar-link-color-hover;
- $topbar-dropdown-link-bg: $orange;
- $topbar-dropdown-link-bg-hover: lighten($orange, 10%);
+// $topbar-dropdown-bg: $oil;
+// $topbar-dropdown-link-color: $white;
+// $topbar-dropdown-link-color-hover: $topbar-link-color-hover;
+// $topbar-dropdown-link-bg: $oil;
+// $topbar-dropdown-link-bg-hover: $jet;
 // $topbar-dropdown-link-weight: $font-weight-normal;
 // $topbar-dropdown-toggle-size: 5px;
- $topbar-dropdown-toggle-color: rgba($white, .6);
+// $topbar-dropdown-toggle-color: $white;
 // $topbar-dropdown-toggle-alpha: .4;
 
 // $topbar-dropdown-label-color: $monsoon;
 // $topbar-dropdown-label-text-transform: uppercase;
 // $topbar-dropdown-label-font-weight: $font-weight-bold;
 // $topbar-dropdown-label-font-size: rem-calc(10);
- //$topbar-dropdown-label-bg: $orange;
+// $topbar-dropdown-label-bg: $oil;
 
 // Top menu icon styles
 // $topbar-menu-link-transform: uppercase;
@@ -1491,7 +1460,7 @@ $topbar-dropdown-link-color-hover: $topbar-link-color-hover;
 // $topbar-menu-icon-position: $opposite-direction; // Change to $default-float for a left menu icon
 
 // Transitions and breakpoint styles
-$topbar-transition-speed: 300ms;
+// $topbar-transition-speed: 300ms;
 // Using rem-calc for the below breakpoint causes issues with top bar
 // $topbar-breakpoint: #{lower-bound($medium-range)}; // Change to 9999px for always mobile layout
 // $topbar-media-query: "#{$screen} and (min-width:#{lower-bound($topbar-breakpoint)})";
@@ -1515,12 +1484,3 @@ $topbar-transition-speed: 300ms;
 // $include-accessibility-classes: true;
 // $include-table-visibility-classes: true;
 // $include-legacy-visibility-classes: true;
-
-// 37. animated grid
-$item_width: 300px;
-$sidebar_width: 0px;
-$color_primary: #f5f5f5;
-$color_secondary: #fff;
-$color_link: #81c483;
-$anim-time: 0.5s;
-
